--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="//db.onlinewebfonts.com/c/854f40508546a6154ded78884803020e?family=Lyon+Text+Web+Black" rel="stylesheet"
-      type="text/css" />
+    <!-- <link href="//db.onlinewebfonts.com/c/854f40508546a6154ded78884803020e?family=Lyon+Text+Web+Black" rel="stylesheet"
+      type="text/css" /> -->
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Meera+Inimai&display=swap" rel="stylesheet">
     <!--
